# isometric-city

./: .env.example  PERFORMANCE_IMPROVEMENTS.md  README.md  RENDERING_FIX_SUMMARY.md  eslint.config.mjs  gt-lock.json  gt.config.json  manual-test-attempt.txt  next.config.js  package-lock.json  package.json
.claude/: settings.local.json
.cursor/nal-trace/: client-a3956ef0-7885-44e2-93e4-ef67ee864a5e.ndjson  client-e3b27e22-d08a-4e75-a952-47a100602948.ndjson
desktop-app/scripts/: generate-icons.mjs
desktop-app/src/: App.tsx  styles.css
desktop-app/src-tauri/: tauri.conf.json
docs/: AI_AGENT_INTEGRATION.md
docs/sprite-audit/: RON_SPRITE_AUDIT_COMPLETE.md  SPRITE_AUDIT.md
public/: register.md  skill.md
public/_gt/: de.json  es.json  fr.json  it.json  ja.json  pt-BR.json  tr.json  zh.json
scripts/: ai-supervisor.sh  check-game-state.mjs  convert-images-to-webp.js  game-runner.ts  monitor-ai.mjs  monitor-ai.sh  monitor-game.sh  start-game-with-monitor.sh  watch-ai.mjs
src/: middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Game.tsx
src/context/: AgentCivilizationContext.tsx  CoasterContext.tsx  CoasterMultiplayerContext.tsx  GameContext.tsx  MultiplayerContext.tsx  RiseGameContext.tsx
src/core/: index.ts
src/games/: index.ts
src/hooks/: useCoasterMultiplayerSync.ts  useMultiplayerSync.ts  useStorageNamespace.ts  useTipSystem.ts
src/lib/: agentAI.ts  cityIndex.ts  cityTemplateGenerator.ts  names.ts  (+14 more)
tauri-game-hub/: index.html  package-lock.json  package.json  tailwind.config.js
(+248 files in other folders)
