[package]
name = "iso-games-desktop"
version = "0.1.0"
description = "IsoCity + IsoCoaster desktop app"
authors = ["IsoGames"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
